2014-06-30  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	Backport from Mainline
	2014-06-20  Jakub Jelinek  <jakub@redhat.com>
	2014-06-11  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	PR tree-optimization/61306
	* tree-ssa-math-opts.c (struct symbolic_number): Store type of
	expression instead of its size.
	(do_shift_rotate): Adapt to change in struct symbolic_number. Return
	false to prevent optimization when the result is unpredictable due to
	arithmetic right shift of signed type with highest byte is set.
	(verify_symbolic_number_p): Adapt to change in struct symbolic_number.
	(find_bswap_1): Likewise. Return NULL to prevent optimization when the
	result is unpredictable due to sign extension.
	(find_bswap): Adapt to change in struct symbolic_number.

2014-06-27  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2014-06-26  Uros Bizjak  <ubizjak@gmail.com>

	PR target/61586
	* config/alpha/alpha.c (alpha_handle_trap_shadows): Handle BARRIER RTX.

2014-06-26  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/61542
	* config/rs6000/vsx.md (vsx_extract_v4sf): Fix bug with element
	extraction other than index 3.

2014-06-24  Jakub Jelinek  <jakub@redhat.com>

	PR target/61570
	* config/i386/driver-i386.c (host_detect_local_cpu): For unknown
	model family 6 CPU with has_longmode never use a CPU without
	64-bit support.

2014-06-20  Chung-Lin Tang  <cltang@codesourcery.com>

	Backport from mainline

	2014-06-20  Julian Brown  <julian@codesourcery.com>
	            Chung-Lin Tang  <cltang@codesourcery.com>

	* config/arm/arm.c (arm_output_mi_thunk): Fix offset for
	TARGET_THUMB1_ONLY. Add comments.

2014-06-18  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2014-06-06  Uros Bizjak  <ubizjak@gmail.com>

	PR target/61423
	* config/i386/i386.md (*floatunssi<mode>2_i387_with_xmm): New
	define_insn_and_split pattern, merged from *floatunssi<mode>2_1
	and corresponding splitters.  Zero extend general register